@@ -32,7 +32,7 @@ instead (see below for details).
 </dd>
 </dl>
 
-__DOWNLOAD_INFO__(`3.2.3', `21 September 2009', `3.3.50', `12 Sep 2009')
+__DOWNLOAD_INFO__(`3.2.4', `28 January 2010', `3.3.50', `12 Sep 2009')
 </div>
 
 <div class="section">
