@@ -17,6 +17,11 @@ __OCTAVE_HTTP__(`about.html', `about Octave').</p></div>
 __TITLE_BAR__(`Current News')
 
 <dl>
+<dt>January 28, 2010</dt>
+<dd>Version 3.2.4 has been released and is now available for ftp.
+Octave 3.2.4 is a bug-fixing release
+__OCTAVE_HTTP__(`NEWS-3.2.html', `NEWS') file for a list of
+user-visible changes in the 3.2.x series.</dd>
 <dt>September 21, 2009</dt>
 <dd>Version 3.2.3 has been released and is now available for ftp.
 Octave 3.2.3 is a bug-fixing release
