@@ -31,6 +31,11 @@
 
 <div class="section">
 <dl>
+<dt>January 28, 2010</dt>
+<dd>Version 3.2.4 has been released and is now available for ftp.
+Octave 3.2.4 is a bug-fixing release
+<a href="NEWS-3.2.html">NEWS</a> file for a list of
+user-visible changes in the 3.2.x series.</dd>
 <dt>September 21, 2009</dt>
 <dd>Version 3.2.3 has been released and is now available for ftp.
 Octave 3.2.3 is a bug-fixing release
